--- a/branches/mafw-pr/mafw-gst-renderer/debian/changelog
+++ b/branches/mafw-pr/mafw-gst-renderer/debian/changelog
@@ -1,3 +1,9 @@
+mafw-gst-renderer (0.3.2010.15-1) unstable; urgency=low
+
+  * Pre-rel test.
+
+ -- Mika Tapojärvi <ext-mika.tapojarvi@nokia.com>  Tue, 13 Apr 2010 10:09:38 +0200
+
 mafw-gst-renderer (0.2.2010.07-2) unstable; urgency=low
 
   * Fixes: NB#156757 - Volume settings can't be changed via Volume key, Media player is playing, Tklock is On.
