--- a/mafw-shared/debian/changelog
+++ b/mafw-shared/debian/changelog
@@ -1,3 +1,9 @@
+mafw-shared (0.3.2010.15-1) unstable; urgency=low
+
+  * Pre-rel test.   
+
+ -- Mika Tapojärvi <ext-mika.tapojarvi@nokia.com>  Tue, 13 Apr 2010 10:09:38 +0200
+
 mafw-shared (0.2.2010.06-1) unstable; urgency=low
 
   * Fixes: NB#155331 - Backwards compatibility problems with strict version dependency in libmafw-shared0
