--- a/mafw-test-gui/debian/changelog
+++ b/mafw-test-gui/debian/changelog
@@ -1,3 +1,9 @@
+mafw-test-gui (0.2.2010.06-2) unstable; urgency=low
+
+  * Bump version number so its not the same as the stock package
+
+ -- Mika Tapojärvi <mika.tapojarvi@sse.fi>  Wed, 18 Oct 2017 20:30:03 -0400
+
 mafw-test-gui (0.2.2010.06-1) unstable; urgency=low
 
   * Rebuild.
